src/main/java/com/example/finalproject/_core/error/exception/Exception404.java
package com.example.finalproject._core.error.exception;

public class Exception404 extends RuntimeException{

    public Exception404(String msg) {
        super(msg);
    }
}
